--- a/index.html
+++ b/index.html
@@ -1,1 +1,277 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Code Example Website</title>
+    <style>
+      textarea {
+        width: 100%;
+        height: 10rem;
+      }
 
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background: linear-gradient(to bottom right, #2B0D63, #0C9E9F);
+        /* Gradient from neon blue (#2B0D63) to green (#0C9E9F) */
+      }
+
+      h1 {
+        text-align: center;
+        margin: 50px 0;
+        color: #fff;
+        text-shadow: 2px 2px #000;
+      }
+
+      .code-block {
+        margin: 50px;
+        border: 1px solid #ddd;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+      }
+
+      h2 {
+        margin-top: 0;
+      }
+
+      .code {
+        font-family: monospace;
+        white-space: pre;
+        overflow-x: auto;
+      }
+
+      .copy-button {
+        display: block;
+        margin: 10px 0;
+        padding: 5px 10px;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      /* Version number display */
+      #version {
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
+        color: #fff;
+        text-shadow: 1px 1px #000;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Code Example Website</h1>
+    <!--ROMANS.HTML-->
+    <div class="code-block">
+      <h2>CSS Box Properties Assignment</h2>
+      <h3>Romans.html (officially overdue Jan 15, 11:59 PM)</h3>
+      <p class="code">
+        <textarea>
+						<!DOCTYPE HTML>
+						<html>
+							<head>
+								<title>caesar</title>
+								<style>
+    /*codepool reference*/
+      html {
+        background-image: url("https://i.ibb.co/YL9b7Nt/Bamboo-Forest.jpg");
+        background-size: 100%;
+      }
+
+      body {
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;
+      }
+
+      h1 {
+        background-color: red;
+        color: white;
+        padding: 12px;
+        text-align: center;
+        border-radius: 16px;
+      }
+
+      div {
+        background-color: white;
+        opacity: 0.6;
+        padding: 5px;
+        margin: 15px;
+      }
+
+      p {
+        border-width: 5px;
+        border-style: solid;
+        border-color: black;
+        border-radius: 50px 0;
+        padding: 10px;
+        margin: 10px;
+        color: black;
+        background-color: yellow;
+        text-align: left;
+      }
+
+      h2 {
+        text-align: right;
+      }
+    </style>
+							</head>
+							<body>
+								<!--Codepool reference-->
+								<h1>Julius Caesar Character List</h1>
+								<div>
+									<h2>Brutus</h2>
+									<p>A supporter of the republic who believes strongly in a government guided by the votes of senators. While Brutus loves Caesar as a friend, he opposes the ascension of any single man to the position of dictator, and he fears that Caesar aspires to such power. Brutus&rsquo;s inflexible sense of honor makes it easy for Caesar&rsquo;s enemies to manipulate him into believing that Caesar must die in order to preserve the republic. While the other conspirators act out of envy and rivalry, only Brutus truly believes that Caesar&rsquo;s death will benefit Rome. Unlike Caesar, Brutus is able to separate completely his public life from his private life; by giving priority to matters of state, he epitomizes Roman virtue. Torn between his loyalty to Caesar and his allegiance to the state, Brutus becomes the tragic hero of the play</p>
+								</div>
+								<div>
+									<h2>Julius</h2>
+									<p>A great Roman general and senator, recently returned to Rome in triumph after a successful military campaign. While his good friend Brutus worries that Caesar may aspire to dictatorship over the Roman republic, Caesar seems to show no such inclination, declining the crown several times. Yet while Caesar may not be unduly power-hungry, he does possess his share of flaws. He is unable to separate his public life from his private life, and, seduced by the populace&rsquo;s increasing idealization and idolization of his image, he ignores ill omens and threats against his life, believing himself as eternal as the North Star.</p>
+								</div>
+								<div>
+									<h2>Cassius</h2>
+									<p>A talented general and longtime acquaintance of Caesar. Cassius dislikes the fact that Caesar has become godlike in the eyes of the Romans. He slyly leads Brutus to believe that Caesar has become too powerful and must die, finally converting Brutus to his cause by sending him forged letters claiming that the Roman people support the death of Caesar. Impulsive and unscrupulous, Cassius harbors no illusions about the way the political world works. A shrewd opportunist, he proves successful but lacks integrity.</p>
+								</div>
+								<div>
+									<h2>Antony</h2>
+									<p>A friend of Caesar. Antony claims allegiance to Brutus and the conspirators after Caesar&rsquo;s death in order to save his own life. Later, however, when speaking a funeral oration over Caesar&rsquo;s body, he spectacularly persuades the audience to withdraw its support of Brutus and instead condemn him as a traitor. With tears on his cheeks and Caesar&rsquo;s will in his hand, Antony engages masterful rhetoric to stir the crowd to revolt against the conspirators. Antony&rsquo;s desire to exclude Lepidus from the power that Antony and Octavius intend to share hints at his own ambitious nature</p>
+								</div>
+							</body>
+						</html>
+					</textarea>
+      </p>
+      <button class="copy-button" data-clipboard-target=".code">Copy To Clipboard</button>
+    </div>
+    <!--END OF ROMANS.HTML-->
+    <!--SELECTORS.HTML-->
+    <div class="code-block">
+      <h2>CSS Selectors (Class & Descendents) - Lord Of The Ring</h2>
+      <h3>Selectors.html (officially overdue Jan 22, 11:59PM)</h3>
+      <p class="code">
+        <textarea>
+						<!DOCTYPE html>
+						<html>
+							<head>
+								<title>selectors</title>
+								<style>
+    /*codepool reference*/
+      @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+
+      body {
+        background-image: linear-gradient(to bottom right, red, yellow);
+      }
+
+      flex {
+        display: flex;
+        justify-content: center;
+      }
+
+      .books {
+        border: 2px solid red;
+        height: 250px;
+      }
+
+      div {
+        background-color: #FBD603;
+        border-radius: 80px;
+        display: block;
+        padding: 80px;
+        margin: 80px;
+      }
+
+      .second-tittle {
+        text-align: center;
+        color: white;
+        font-family: 'Dancing Script', cursive;
+        font-size: 40px;
+      }
+
+      .df-tittle {
+        text-align: center;
+        font-family: 'Dancing Script', cursive;
+        font-size: 40px;
+      }
+
+      .footer {
+        text-align: center;
+        font-family: 'Dancing Script', cursive;
+      }
+
+      .characters {
+        height: 300px;
+      }
+
+      img {
+        margin: 10px;
+        height: 300px;
+      }
+
+      .third-img {
+        border-radius: 80px;
+        height: 300px;
+      }
+    </style>
+							</head>
+							<body>
+								<!--Codepool reference-->
+								<h1 class="df-tittle">
+									<b>The Characters</b>
+								</h1>
+								<flex>
+									<img src="https://drive.google.com/thumbnail?id=1pgTAe13kdQqPRRpdH_oeU73XsRbDtE43" class="characters">
+										<img src="https://drive.google.com/thumbnail?id=1N0zYS0mHYTd5urGN-Wv6n8ZWXcM2g4kb
+" class="characters">
+											<img src="https://drive.google.com/thumbnail?id=19bxHt-1gi_TfCRqRh79VN_B3PvAsWDUL" class="third-img">
+												<img src="https://drive.google.com/thumbnail?id=1XmxsKfEwMNi5qXCpL-ym_0x1wSFAK8C-
+" class="characters">
+												</flex>
+												<div>
+													<h1 class="second-tittle">Book covers</h1>
+													<flex>
+														<img src="https://drive.google.com/thumbnail?id=1GD6faseOFzmGeOuK-rCbtMLH9dZm5V14" class="books" height="250">
+															<img src="https://drive.google.com/thumbnail?id=1dXep7a6MK4durh4UNzjFyilyxcm6VWUz" class="books" height="250">
+																<img src="https://drive.google.com/thumbnail?id=15QnskVXlLKGwJX1thmY8ndbW0mOhxnMI" class="books" height="250">
+																	<img src="https://drive.google.com/thumbnail?id=1sngqma8LLFn7iG-w3nLRjfzdad0LMhY2" class="books" height="250">
+																		<img src="https://drive.google.com/thumbnail?id=1HuSi75FPOEAC998IOHp1Yp_6Brpje355" class="books" height="250">
+																		</flex>
+																	</div>
+																	<p class="footer">Done by XXX</p>
+																</body>
+															</html>
+														</textarea>
+      </p>
+      <button class="copy-button" data-clipboard-target=".code">Copy To Clipboard</button>
+    </div>
+    <!--END OF SELECTORS.HTML-->
+    <div class="code-block">
+      <h2>Code Example 3</h2>
+      <p class="code">Code paragraph goes here.</p>
+      <button class="copy-button" data-clipboard-target=".code">Copy Code</button>
+    </div>
+    <div class="code-block">
+      <h2>Code Example 2</h2>
+      <p class="code">Code paragraph goes here.</p>
+      <button class="copy-button" data-clipboard-target=".code">Copy Code</button>
+    </div>
+    <div id="version">Version 1.1</div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
+    <script>
+      // Initialize clipboard.js
+      var clipboard = new ClipboardJS('.copy-button');
+      // Log successful copy to console
+      clipboard.on('success', function(e) {
+        console.log('Copied to clipboard!');
+        alert('Code copied successfully!');
+        e.clearSelection();
+      });
+      // Log unsuccessful copy to console
+      clipboard.on('error', function(e) {
+        console.log('Unable to copy!');
+        alert('Unable to copy code!');
+      });
+    </script>
+  </body>
+</html>
