--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Code Example Website</title>
+    <title>✨Code Pool✨</title>
     <style>
       textarea {
         width: 100%;
