--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </style>
   </head>
   <body>
-    <h1>Code Example Website</h1>
+    <h1>✨Code Pool References✨</h1>
     <!--ROMANS.HTML-->
     <div class="code-block">
       <h2>CSS Box Properties Assignment</h2>
