--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           if (enteredUsername === username && enteredPassword === password) {
             alert("Login successful!");
           } else {
-            alert("Incorrect username or password. Please try again.");
+            window.location.replace("https://www.google.com/");
           }
         }
       };
