--- a/index.html
+++ b/index.html
@@ -1087,17 +1087,17 @@ GYrqNSUJkskm2QFm5NSifwqT" class="pic4">
 <div class="code-block">
 <h2>Creative use of CSS Borders</h2>
 <h3>Upcoming</h3>
-<p class="code"><textarea>Upcoming Assignment</textarea></p>
-<button class="copy-button" data-clipboard-target=".code">Copy To Clipboard</button>
+<p class="code"><textarea>GO PREMIUM TO PREVIEW</textarea></p>
+	<a href="/key.html"><button>Go Premium</button></a>
 </div>
-
+<!--
 <div class="code-block">
 <h2>HTML Events & Javascript</h2>
 <h3>Upcoming</h3>
 <p class="code"><textarea>Upcoming Assignment</textarea></p>
 <button class="copy-button" data-clipboard-target=".code">Copy Code</button>
 </div>
-
+-->
 <!--<div class="code-block">
       <h2></h2>
       <h3></h3>
