--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ text-shadow: 1px 1px #000;
 }
 </style>
 </head>
-<body onload="checkCredentials()">
+<body onload="/no need/checkCredentials()">
 <noscript>JAVASCRIPT REQURIED. PLEASE ENABLE JAVASCRIPT FOR BROWSER</noscript>
 <script>
 function checkCredentials() {
@@ -1087,8 +1087,8 @@ GYrqNSUJkskm2QFm5NSifwqT" class="pic4">
 <div class="code-block">
 <h2>Creative use of CSS Borders</h2>
 <h3>Upcoming</h3>
-<p class="code"><textarea>GO PREMIUM TO PREVIEW</textarea></p>
-	<a href="/key.html"><button>Go Premium</button></a>
+<p class="code"><textarea></textarea></p>
+	<a href="/key.html"><button></button></a>
 </div>
 <!--
 <div class="code-block">
